# K-Planes

./: README.md  pyproject.toml
k_planes/: main.py
k_planes/datasets/: data_loading.py  phototourism_dataset.py
k_planes/models/: density_fields.py  kplane_field.py  lowrank_model.py
k_planes/ops/image/: metrics.py
k_planes/runners/: base_trainer.py  phototourism_trainer.py  regularization.py  static_trainer.py  video_trainer.py
k_planes/utils/: create_rendering.py  eval_model_metrics.py
